@@ -379,7 +379,7 @@ class QueryDlg(QtGui.QDialog):
         stop_label = QtGui.QLabel(self.__tr('Stop:', 'A range selector label'),
             rows_range_gb)
         range_layout.addWidget(stop_label, 1, 0)
-        self.rstop.setText(str(nrows))
+        self.rstop.setText(unicode(nrows))
         range_layout.addWidget(self.rstop, 1, 1)
 
         step_label = QtGui.QLabel(self.__tr('Step:', 'A range selector label'),
@@ -445,7 +445,7 @@ class QueryDlg(QtGui.QDialog):
 
         :Parameter field_id: is the field identifier in the combobox current item
         """
-        self.query_le.insert(str(field_id).split(' ')[0])
+        self.query_le.insert(unicode(field_id).split(' ')[0])
 
 
     def slotInsertFunction(self, text):
@@ -457,7 +457,7 @@ class QueryDlg(QtGui.QDialog):
 
         :Parameter text: is the text of the combobox current item
         """
-        name2call = {'where': 'where(B, N, N)',
+        name2call = {u'where': 'where(B, N, N)',
             'sin': 'sin(F|C)',
             'cos': 'cos(F|C)',
             'tan': 'tan(F|C)',
@@ -473,7 +473,7 @@ class QueryDlg(QtGui.QDialog):
             'imag': 'imag(C)',
             'complex': 'complex(F, F)'
             }
-        self.query_le.insert(name2call[str(text)])
+        self.query_le.insert(name2call[unicode(text)])
 
 
     def slotUpdateOKState(self):
@@ -501,7 +501,7 @@ class QueryDlg(QtGui.QDialog):
         status_ok = True
 
         # Check the table name
-        ft_name = str(self.name_le.text())
+        ft_name = unicode(self.name_le.text())
         if not ft_name:
             status_ok = False
         elif ft_name in self.used_names:
@@ -510,7 +510,7 @@ class QueryDlg(QtGui.QDialog):
                 """ choose another one.""", 'A logger info message')
 
         # Check the indices column name
-        indices_colname = str(self.indices_column.text())
+        indices_colname = unicode(self.indices_column.text())
         if self.indices_column.isEnabled():
             if indices_colname == '':
                 status_ok = False
@@ -530,13 +530,13 @@ class QueryDlg(QtGui.QDialog):
 
         # Check the condition.
         # If it is an empty string the OK button is not enabled
-        condition = str(self.query_le.text())
+        condition = unicode(self.query_le.text())
         if condition.isspace() or (condition in [None, '']):
             status_ok = False
 
         # Check the range values
-        start_str = str(self.rstart.text())
-        stop_str = str(self.rstop.text())
+        start_str = unicode(self.rstart.text())
+        stop_str = unicode(self.rstop.text())
         if not (start_str and stop_str):
             status_ok = False
         else:
@@ -600,7 +600,7 @@ class QueryDlg(QtGui.QDialog):
         """Compose the query and return."""
 
         # Get the query
-        condition = str(self.query_le.text())
+        condition = unicode(self.query_le.text())
         # Blanks at the begining of condition raise a SyntaxError
         condition = condition.strip()
         if not self.checkConditionSyntax(condition):
@@ -609,16 +609,16 @@ class QueryDlg(QtGui.QDialog):
         self.query_info['condition'] = condition
 
         # Get the table name and the name of the column with indices (if any)
-        self.query_info['ft_name'] = str(self.name_le.text())
+        self.query_info['ft_name'] = unicode(self.name_le.text())
         if self.indices_column.isEnabled():
             self.query_info['indices_field_name'] = \
-                str(self.indices_column.text())
+                unicode(self.indices_column.text())
 
         # Get the range and convert it into a Python range
         self.query_info['rows_range'] = (
-           numpy.array(str(self.rstart.text())).astype(numpy.int64) - 1,
-           numpy.array(str(self.rstop.text())).astype(numpy.int64),
-           numpy.array(str(self.rstep.text())).astype(numpy.int64))
+           numpy.array(unicode(self.rstart.text())).astype(numpy.int64) - 1,
+           numpy.array(unicode(self.rstop.text())).astype(numpy.int64),
+           numpy.array(unicode(self.rstep.text())).astype(numpy.int64))
 
         # Exit
         self.accept()
